# demo_sagemaker_docker_decisiontree

./: .gitignore  bring-custom-container.ipynb
test_container/: Dockerfile  ReadMe.md  pyproject.toml  requirements.txt
test_container/decision_trees/: predictor.py  train
